corrected link paths

--- a/uebungen/Me/index.html
+++ b/uebungen/Me/index.html
@@ -212,11 +212,11 @@
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
             <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-            <a href="https://de.wikipedia.org/wiki/Clown"></a><i class="fa fa-instagram w3-hover-opacity"></i></a>
-            <a href="https://de.wikipedia.org/wiki/Clown"></a><i class="fa fa-snapchat w3-hover-opacity"></i></a>
-            <a href="https://de.wikipedia.org/wiki/Clown"></a><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
-            <a href="https://de.wikipedia.org/wiki/Clown"></a><i class="fa fa-twitter w3-hover-opacity"></i></a>
-            <a href="https://de.wikipedia.org/wiki/Clown"></a><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+            <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+            <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
+            <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+            <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+            <a href="https://de.wikipedia.org/wiki/Clown"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         </div>
     </footer>
 
